[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-langgraph"
dynamic = ["version"]
description = "InfoLang semantic memory for LangGraph and LangChain: a BaseStore, memory tools, and prebuilt graph nodes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = [
  "infolang",
  "langgraph",
  "langchain",
  "basestore",
  "memory",
  "semantic-memory",
  "agents",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "langgraph>=1.0,<2",
  "langchain-core>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://infolang.ai/docs/integrations/langgraph"
Source = "https://github.com/InfoLang-Inc/infolang-langgraph"
Issues = "https://github.com/InfoLang-Inc/infolang-langgraph/issues"

[tool.hatch.version]
path = "src/infolang_langgraph/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_langgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: end-to-end tests that hit the real InfoLang API (require INFOLANG_API_KEY)",
]
addopts = "--cov=infolang_langgraph --cov-report=term-missing --cov-fail-under=90 -m 'not live'"

[tool.coverage.run]
source = ["src/infolang_langgraph"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_langgraph"]
